# PureBase

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  UML.xml  Untitled Diagram.xml  datamodel.xml  install_restbed.sh  main.cpp  test.json
Adapter/: abstract_adapter.cc  abstract_adapter.h  adapter.cc  adapter.h
Adapter/PostgresAdapter/: postgres_adaptee.cc  postgres_adaptee.h  postgres_adapter.cc  postgres_adapter.h
Adapter/PostgresAdapter/PGConnection/: pg_connection.cc  pg_connection.h
Adapter/PostgresAdapter/PGConnection/Tests/: test_connection.cc
Adapter/PostgresAdapter/Tests/: postgres_test.cc  postgres_test.cpp
ApiEndpoint/: api_endpoint.cc  api_endpoint.h
ApiEndpoint/Tests/: test_endpoint.cpp
Application/: application.cc  application.h
Application/Tests/: test_application.cc
Client/: CMakeLists.txt  client.cpp  main.cpp  mainwindow.cc  mainwindow.h  mainwindow.ui  simple_cmd_client.cc  simple_cmd_client.h
Command/: command.cc  command.h
ConnectionHeaders/: connection_headers.h
CreateDBCommand/: create_db_command.cc  create_db_command.h
CreateDBCommand/Tests/: create_db_command_test.cc
CreateTableCommand/: create_table_command.cc  create_table_command.h
CreateTableCommand/Test/: test_create_table_command.cc
DataHelper/: data.cc  data.h  data_helper.cc  data_helper.h
DataHelper/Document_Helper/: document_helper.cc  document_helper.h
DataHelper/Document_Helper/Tests/: document_helper_test.cc
DataHelper/Video_Helper/: video_helper.cc  video_helper.h
DatabaseManager/: DatabaseManager.cpp  DatabaseManager.h  database_manager.cc  database_manager.h
DeleteDBCommand/: delete_db_command.cc  delete_db_command.h
DeleteDBCommand/Tests/: test_delete_db_command.cc
DeleteRowCommand/: delete_row_command.cc  delete_row_command.h
Document/: document.cc  document.h
Document/Tests/: document_tests.cc
DropTableCommand/: drop_table_command.cc  drop_table_command.h
DropTableCommand/Tests/: test_drop_table_command.cc
Helper/: defaults.h  helper.cc  helper.h
InsertRowCommand/: insert_row_command.cc  insert_row_command.h
Lesson/: lesson.cc  lesson.h
Lesson/Tests/: lesson_test.cc
LessonHelper/: lesson_helper.cc  lesson_helper.h
LessonHelper/Tests/: test_lesson_helper.cc
Parser/: parser.cc  parser.h
Permissions/: permissions.cc  permissions.h
PermissionsBase/: permissions_base.h
Query/: abstract_query_factory.cc  abstract_query_factory.h  query.cc  query.h
Query/Tests/: test_queries.cpp
QueryProcessor/: query_processor.cc  query_processor.h
SelectTableCommand/: select_table_command.cc  select_table_command.h
SelectTableCommand/Tests/: test_select_table_command.cc
Server/: server.cc  server.h
Server/Tests/: test_endpoint.cpp
Subject/: subject.cc  subject.h
SubjectHelper/: subject_helper.cc  subject_helper.h
TablesManager/: TablesManager.cpp  tables_manager.cc  tables_manager.h
Teacher/: teacher.cc  teacher.h
Teacher/Tests/: teacher_tests.cc
TeacherHelper/: teacher_helper.cc  teacher_helper.h
UpdateTableCommand/: update_table_command.cc  update_table_command.h
UpdateTableCommand/Tests/: test_update_table_command.cc
Video/: video.cc  video.h
ci/travis/: install-linux.sh  install-osx.sh
session/: CMakeLists.txt  session.cc  session.h
session/test/: test_session.cc
session_builder/: session_builder.h
session_by_name/: CMakeLists.txt  session_by_name.cc  session_by_name.h
session_by_name/test/: test_session_by_name.cc
session_director/: CMakeLists.txt  session_director.cc  session_director.h
session_director/test/: test_session_director.cc
socket/: socket.cpp  socket.hpp
sys/: CMakeLists.txt  sys.cc  sys.h
sys/test/: test_sys.cc
sys_base/: sys_base.h
table/: table.cc  table.cpp  table.h
user/: User.h
